List LDN targets for a country

--- a/.env.example
+++ b/.env.example
@@ -55,9 +55,6 @@ ORCID_REDIRECT_URI="${APP_URL}/api/v1/oauth/orcid/callback"
 ORCID_BASE_URI=https://sandbox.orcid.org/oauth
 ORCID_GRANT_TYPE=authorization_code
 
-SCIO_SERVICES_BASE_API_URL=
-SCIO_SERVICES_CLIENT_ID=
-SCIO_SERVICES_SECRET=
-SCIO_CACHE_TOKEN_KEY=scio_token
+SCIO_SERVICES_BASE_API_URL=https://lup4ldn.api.dev2.scio.services/api
 
 APP_LOGIN_URL="https://lup4ldn.scio.services/#/login"
