Add urls for project data preprocessing

--- a/.env.example
+++ b/.env.example
@@ -24,7 +24,7 @@ DB_PASSWORD=scio_lup4ldn
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DRIVER=s3
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=redis
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
@@ -56,5 +56,9 @@ ORCID_BASE_URI=https://sandbox.orcid.org/oauth
 ORCID_GRANT_TYPE=authorization_code
 
 SCIO_SERVICES_BASE_API_URL=https://lup4ldn.api.dev2.scio.services/api
+
+# Dataset preprocessing
+SCIO_DEFAULT_DATASET_PREPROCESSING_URL=
+SCIO_CUSTOM_DATASET_PREPROCESSING_URL=
 
 APP_LOGIN_URL="https://lup4ldn.scio.services/#/login"
