--- a/docker/8.0/supervisord.conf
+++ b/docker/8.0/supervisord.conf
@@ -14,7 +14,7 @@ stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 
 [program:worker]
-command=/usr/bin/php -d variables_order=EGPCS /var/www/html/artisan queue:listen
+command=/usr/bin/php -d variables_order=EGPCS /var/www/html/artisan queue:listen --timeout=0
 user=sail
 environment=LARAVEL_SAIL="1"
 stdout_logfile=/dev/stdout
