Change project scenarions and add hectares calculator

--- a/.env.example
+++ b/.env.example
@@ -57,8 +57,12 @@ ORCID_GRANT_TYPE=authorization_code
 
 SCIO_SERVICES_BASE_API_URL=https://lup4ldn.api.dev2.scio.services/api
 
-# Dataset preprocessing
+# Dataset preprocessing.
 SCIO_DEFAULT_DATASET_PREPROCESSING_URL=
 SCIO_CUSTOM_DATASET_PREPROCESSING_URL=
+
+# Extra services.
+SCIO_CUSTOM_ROI_HECTARES_SERVICE_URL=
+SCIO_CUSTOM_LDNMAP_SERVICE_URL=
 
 APP_LOGIN_URL="https://lup4ldn.scio.services/#/login"
