--- a/.env.example
+++ b/.env.example
@@ -64,5 +64,6 @@ SCIO_CUSTOM_DATASET_PREPROCESSING_URL=
 # Extra services.
 SCIO_CUSTOM_ROI_HECTARES_SERVICE_URL=
 SCIO_CUSTOM_LDNMAP_SERVICE_URL=
+SCIO_LAND_COVER_CLASS_EXTRACTOR_URL=
 
 APP_LOGIN_URL="https://lup4ldn.scio.services/#/login"
